@@ -108,5 +108,6 @@
 2020-09-18 full_catering.backup added loss items and avery label as example insert for commercial barcode.
 2020-09-19 catering.py corrected type error in info
 2020-09-19 catering.py blocked payments after switching employee-clients and not yet logged on switched employee.
-2020-09-19 catering.py after switching employee-clients replacement emptying ordering display to avoid double payments
+2020-09-19 catering.py after switching employee-clients replacement emptying ordering display
+2020-09-19 catering.py after paying or switching empty caches for cash payments in modest calculator
 
